prevent footer info from cutting off

--- a/style/main.css
+++ b/style/main.css
@@ -62,7 +62,6 @@ aside {
   display: flex;
   justify-content: space-around;
   width: 75%;
-  margin: 10px 0;
 }
 
 .footer-container {
